Added Gandalf icons

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" style="max-height: 40px" src="https://cdn.iconscout.com/icon/premium/png-256-thumb/wizard-2167117-1819733.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">Lo que necesitas</h5>
                   Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
@@ -125,7 +125,7 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" style="max-height: 40px" src="https://cdn.iconscout.com/icon/premium/png-256-thumb/wizard-2167117-1819733.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">es simplemente</h5>
                   Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
@@ -136,7 +136,7 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img class="mr-3" style="max-height: 40px" src="https://cdn.iconscout.com/icon/premium/png-256-thumb/wizard-2167117-1819733.png" alt="Generic placeholder image">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">más Gandalf&nbsp;</h5>
                   Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
