Añadido boton de volver arriba y link de copyright

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright text</p>
+            <a href="https://www.youtube.com/watch?v=Yck3Fd0QLtA&autoplay=1" target="_blank">Copyright</a> <a id="volver-arriba" href="#">Volver arriba!</a>
           </div>
         </div>
       </div>
