--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Portfolio Page Template</title>
+    <title>Gandalf Asintiendo</title>
 	<!-- OwlCarousel -->
 	<link rel="stylesheet" href="owl.carousel.min.css">
 	<link rel="stylesheet" href="owl.theme.default.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<!-- Mi CSS -->
-	<link rel="stylesheet" href="main.css">  
+	<link rel="stylesheet" href="main.css"> 
+  <link rel="icon" href="images/favico.png"> 
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-white shadow">
@@ -58,53 +59,23 @@
       </div>
     </section>
 	<section>
-    <div class="card-deck d-flex justify-content-around">
-      <div class="card d-flex justify-content-center">
-        <img class="card-img-top" style="align-self: center" src="https://img.icons8.com/ios/500/gandalf.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" style="align-self: center" src="https://img.icons8.com/ios/500/gandalf.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-	  <div class="card">
-        <img class="card-img-top" style="align-self: center" src="https://img.icons8.com/ios/500/gandalf.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
+    <div id="cardholder" class="card-deck d-flex justify-content-around">
     </div>	
 	</section>  
 	<br>  
     <section id="slider-gandalf">
       <div class="container " style="max-width: 100%;">
         <div class="row">
-        	<div class="owl-carousel owl-theme shadow-lg">
-				<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
-				<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
-				<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
-				<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
-				<div class="item"><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
-				<div class="item"><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
-				<div class="item"><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
-			</div>
-		</div>
+          <div class="owl-carousel owl-theme shadow-lg">
+			    	<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
+			    	<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
+			    	<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
+			    	<div class=""><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
+			    	<div class="item"><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
+			    	<div class="item"><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
+			    	<div class="item"><img src="https://media.tenor.com/VOdWjm2zbEAAAAAC/gandalf-sax-guy.gif"  height="250" alt=""/></div>
+			    </div>
+		    </div>
       </div>
     </section>
 	  
@@ -229,11 +200,13 @@
 	</script>
 	<script src="js/main.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<iframe class="hiddenFrame" width="560" height="315"
 	src="https://www.youtube.com/embed/G1IbRujko-A?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <!-- Script de generado de las cards -->
+  <script src="js/cards.js"></script>
   </body>
 </html>
